--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Music from YouTube</title>
+    <title>Driele Gostosa</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Download Music from YouTube</h1>
+        <h1>Baixar músicas do YouTube</h1>
 
         <!-- Adicione um botão para iniciar o processo de autenticação OAuth -->
-        <a href="/auth" class="auth-button">Authenticate with Google</a>
+        <a href="/auth" class="auth-button">Me da uma mamada hoje</a>
 
         <!-- Formulário de download -->
         <form action="/download" method="POST">
